# splatapult

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cameraconv.py  tasks.py  vcpkg.json
.github/workflows/: build.yaml
data/: input.ply  test_vr.json
font/: JetBrainsMono-Medium.json
meta-quest/: cp_from_sdk
meta-quest/splataplut/Projects/Android/: AndroidManifest.xml  settings.gradle
meta-quest/splataplut/Projects/Android/jni/: Android.mk
meta-quest/splataplut/Src/: SceneModelGl.cpp  SceneModelGl.h  SceneModelHelpers.h  SceneModelShaders.h  SceneModelXr.cpp
meta-quest/splataplut/java/com/oculus/: NativeActivity.java
meta-quest/splatapult/Projects/Android/: build.gradle
meta-quest/splatapult/Projects/Android/jni/: Android.mk
meta-quest/splatapult/assets/: .gitignore
shader/: carpet_frag.glsl  carpet_vert.glsl  debugdraw_frag.glsl  debugdraw_vert.glsl  desktop_frag.glsl  desktop_vert.glsl  multi_radixsort.glsl  multi_radixsort_histograms.glsl  point_frag.glsl  point_geom.glsl  point_vert.glsl  presort_compute.glsl  single_radixsort.glsl  splat_compute.glsl  splat_frag.glsl  splat_geom.glsl  splat_peel_frag.glsl  splat_vert.glsl  text_frag.glsl  text_vert.glsl
src/: android_main.cpp  app.cpp  app.h  camerapathrenderer.cpp  camerapathrenderer.h  cameras.cpp  cameras.h  camerasconfig.cpp  camerasconfig.h  debug_splat_frag.cpp  debug_splat_geom.cpp  debug_splat_vert.cpp  debugdraw.cpp  debugdraw.h  dpsplatrenderer.cpp  dpsplatrenderer.h  flycam.cpp  flycam.h  gaussiancloud.cpp  gaussiancloud.h  gen_bary.py  image.h  joystick.cpp  joystick.h  log.cpp  magiccarpet.cpp  magiccarpet.h  main.cpp  maincontext.h  ply.cpp  ply.h  pointcloud.cpp  pointcloud.h  pointrenderer.cpp  pointrenderer.h  program.cpp  program.h  radix_sort.hpp  raymarchrenderer.cpp  raymarchrenderer.h  (+21 more)
src/core/: binaryattribute.cpp  binaryattribute.h  debugdraw.cpp  debugrenderer.cpp  debugrenderer.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  inputbuddy.cpp  inputbuddy.h  log.cpp  log.h  program.cpp  program.h  statemachine.h  textrenderer.cpp  textrenderer.h  texture.cpp  texture.h  threadsafevalue.h  util.cpp  util.h  vertexbuffer.cpp  vertexbuffer.h  xrbuddy.cpp  xrbuddy.h
